# djsupport

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/docs/: architectural_patterns.md
djsupport/: beatport.py  cache.py  cli.py  config.py  label.py  matcher.py  rekordbox.py  report.py  spotify.py  state.py
docs/plans/: 2026-02-22-chore-repo-file-hygiene-and-access-control-plan.md  2026-02-22-fix-playlist-targeting-safety-plan.md  2026-02-25-feat-reduce-spotify-api-calls-with-early-exit-plan.md  2026-02-26-feat-beatport-chart-import-plan.md  2026-02-28-feat-beatport-label-discovery-plan.md  2026-02-28-fix-remix-artist-co-credit-matching-plan.md  isrc-mutagen-plan.md
docs/reports/: unmatched-tracks-2026-02-25.md
docs/solutions/integration-issues/: beatport-search-api-format-change.md  outdated-claude-md-and-gitignore-drift.md  spotify-rate-limit-handling.md
docs/solutions/logic-errors/: beatport-fuzzy-matcher-version-tags-and-duration-penalty.md  duplicate-spotify-uris-in-playlists-CLI-20260225.md
docs/solutions/performance-issues/: spotify-api-calls-early-exit-optimization.md
tests/: conftest.py  test_beatport.py  test_cache.py  test_cli_description.py  test_config.py  test_label.py  test_match_accuracy.py  test_matcher.py  test_rekordbox.py  test_report.py  test_spotify.py  test_state.py
tests/fixtures/: library.xml  match_test_data.csv
