[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djsupport"
version = "0.3.0"
description = "Sync Rekordbox playlists to Spotify"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23",
    "click>=8.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
djsupport = "djsupport.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["djsupport"]
omit = ["djsupport/cli.py"]

[tool.coverage.report]
show_missing = true
